@@ -1,4 +1,4 @@
-Copyright (c) 2009 by Juliusz Chroboczek
+Copyright (c) 2009, 2010 by Juliusz Chroboczek
 
 Permission is hereby granted, free of charge, to any person obtaining a copy
 of this software and associated documentation files (the "Software"), to deal
